; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/mathlib/extr_m4x4.c_m4x4_pivoted_scale_by_vec3.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/mathlib/extr_m4x4.c_m4x4_pivoted_scale_by_vec3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m4x4_pivoted_scale_by_vec3(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* %7, align 4
  %10 = call i32 @VectorNegative(i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @m4x4_translate_by_vec3(i32 %11, i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @m4x4_scale_by_vec3(i32 %14, i32 %15)
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @m4x4_translate_by_vec3(i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @VectorNegative(i32, i32) #1

declare dso_local i32 @m4x4_translate_by_vec3(i32, i32) #1

declare dso_local i32 @m4x4_scale_by_vec3(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
